# gitops-operator

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.arm32v7  Dockerfile.test  README.md  Tiltfile  docker-compose.yaml  files.rs  git.rs  justfile  main.rs  release-please-config.json  release.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci-armv7.yaml  ci.yaml  ci.yml  coverage.yaml  dependabot.yaml  lint.yaml  release.yaml  test.yaml  test.yml  tests.yaml
files/: config-spm.yaml  grafana-datasources.yaml  prometheus.yaml  tempo.yaml
src/: lib.rs  main.rs  traits.rs
src/configuration/: configuration.rs  mod.rs
src/files/: files.rs  mod.rs
src/git/: git.rs  mod.rs  utils.rs
src/github/: github.rs  mod.rs
src/notifications/: mod.rs  notifications.rs
src/registry/: mod.rs  registry.rs
src/secrets/: mod.rs  secrets.rs
src/telemetry/: mod.rs  telemetry.rs
tests/: configuration_tests.rs  files_tests.rs  git_tests.rs  github_tests.rs  integration_tests.rs  notifications_tests.rs  registry_tests.rs  telemetry_tests.rs
tests/common/: mod.rs
