[package]
name = "gitops-operator"
version = "0.8.0"
authors = ["Gabriel Garrido <kainlite@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
description = "Kubernetes Operator for GitOps workflows"
repository = "https://github.com/kainlite/gitops-operator"
categories = ["command-line-utilities", "network-programming"]
keywords = ["cloud", "kubernetes", "gitops", "gitops-operator"]

[[bin]]
doc = false
name = "gitops-operator"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8.1"
tower-http = { version = "0.6.2", default-features = false, features = ["trace"] }
futures = "0.3.31"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "full", "test-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
git2 = "0.20.0"
serde_yaml = "0.9.34"
base64 = "0.22.1"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
openssl = { version = '0.10', features = ["vendored"] }
uuid = { version = "1.16.0", features = ["v4"] }
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde_json = "1.0.140"
tracing-opentelemetry = "0.29.0"
opentelemetry = "0.29.0"
opentelemetry_sdk = { version =  "0.29.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29.0", features = ["tonic", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.29.0"
axum-prometheus = "0.8.0"
opentelemetry-appender-tracing = "0.29.0"

[dependencies.kube]
version = "0.98.0"
features = ["runtime"]

[dev-dependencies]
mockito = "1.6.1"
wiremock = "0.6"
tokio = { version = "1.44.1", features = ["full", "test-util", "macros", "rt-multi-thread"] }
mockall = "0.12.1"
assert_matches = "1.5.0"
tempfile = "3.8.1"
tower = { version = "0.5.2", features = ["util"] }
serial_test = "3.2.0"

# local testing: ignore
#git = "https://github.com/kube-rs/kube.git"
#rev = "9cdc8766863c1947b06e73eaf5604c4534975410"
#path = "../kube/kube"
