[package]
name = "gitops-operator"
version = "0.10.0"
authors = ["Gabriel Garrido <kainlite@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
description = "Kubernetes Operator for GitOps workflows"
repository = "https://github.com/kainlite/gitops-operator"
categories = ["command-line-utilities", "network-programming"]
keywords = ["cloud", "kubernetes", "gitops", "gitops-operator"]

[[bin]]
doc = false
name = "gitops-operator"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8.9"
tower-http = { version = "0.7.0", default-features = false, features = ["trace"] }
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "full", "test-util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
k8s-openapi = { version = "0.28.0", features = ["latest"] }
git2 = "0.21.0"
serde_yaml = "0.9.34"
base64 = "0.22.1"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
openssl = { version = '0.10', features = ["vendored"] }
uuid = { version = "1.23.3", features = ["v4"] }
# reqwest 0.13 changed default-tls to rustls+aws-lc-rs, which clashes with
# kube's rustls+ring (two CryptoProviders -> rustls panics at client build).
# Keep native-tls (OpenSSL, already vendored) to preserve a single TLS backend.
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "blocking",
    "query",
    "native-tls",
    "charset",
    "http2",
] }
serde_json = "1.0.150"
async-trait = "0.1"
axum-prometheus = "0.10.0"

opentelemetry = { version = "0.32.0" }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", features = ["tonic", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.32.0"
tracing-opentelemetry = { version = "0.33.0" }
jemallocator = "0.5.4"

[dependencies.kube]
version = "4.0.0"
features = ["runtime"]

[dev-dependencies]
mockito = "1.7.2"
wiremock = "0.6"
tokio = { version = "1.52.3", features = ["full", "test-util", "macros", "rt-multi-thread"] }
mockall = "0.14.0"
assert_matches = "1.5.0"
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
serial_test = "3.5.0"

# local testing: ignore
#git = "https://github.com/kube-rs/kube.git"
#rev = "9cdc8766863c1947b06e73eaf5604c4534975410"
#path = "../kube/kube"
